--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=demo
 
 # config database
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/sporticast
-spring.datasource.username=sa
-spring.datasource.password=12345
+spring.datasource.url=jdbc:mysql://localhost:3306/sposticast
+spring.datasource.username=admin
+spring.datasource.password=Atunachuai132
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
